CA-16: CKEditor widget now no longer sits too far to the right; added a width on field containers so that long CKEditor help text no longer forces it out of place

--- a/client_admin/static/client_admin/sass/screen.sass
+++ b/client_admin/static/client_admin/sass/screen.sass
@@ -1491,6 +1491,7 @@ fieldset.module, div.inline-group
       +label()
       word-break: break-all
     div.field_container
+      width: 655px
       float: left
       +legacy-pie-clearfix
       &:first-child
@@ -1664,6 +1665,15 @@ fieldset.module, div.inline-group
           margin: 0 !important
           ul.chzn-results li
             line-height: 14px !important
+
+
+      // CKEditor Positioning
+      //  - - - - - - - - - - - - - - -
+      div.cke
+        margin-left: 0 !important
+
+      span.cke_skin_kama
+        margin-left: 0 !important
 
 
     // Checkbox without Label (is active)
